--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "http://DmitryGK.github.io/hw_finale ",
+  "homepage": "http://dmitrygk.github.io/hw_finale ",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
